--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "my-web-messenger",
+  "name": "middle.messenger.praktikum.yandex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:sass": "sass ./src:./src -w",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -13,6 +14,6 @@
   },
   "dependencies": {
     "handlebars": "^4.7.7",
-    "vite-plugin-handlebars": "^1.6.0"
+    "sass": "^1.63.4"
   }
 }
