--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "dev:sass": "sass ./src:./src -w",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build && node ./server.js"
   },
   "devDependencies": {
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "handlebars": "^4.7.7",
     "sass": "^1.63.4"
   }
