--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,6 @@
     command = "npm run build"
 
 [[redirects]]
-    from = "*"
-    to = "*"
+    from = "/*"
+    to = "/index.html"
     status = 200
