--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "start": "npm run build && node ./server.js"
   },
   "devDependencies": {
+    "@types/node": "^20.5.0",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9"
   },
   "dependencies": {
     "express": "^4.18.2",
     "handlebars": "^4.7.7",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "tsc": "^2.0.4"
   }
 }
