--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "stylelint": "^15.10.3",
     "typescript": "^5.1.6",
     "vite": "^4.3.9"
   },
