--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "URL_TYPE='vite' vite",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
+    "stylelint": "npx stylelint '**/*.scss'",
+    "stylelint:fix": "npx stylelint '**/*.scss' --fix",
     "dev:sass": "sass ./src:./src -w",
     "build": "vite build",
     "preview": "vite preview",
@@ -22,15 +24,16 @@
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
-    "stylelint": "^15.10.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "vite": "^4.3.9",
     "express": "^4.18.2",
     "handlebars": "^4.7.7",
     "sass": "^1.63.4",
     "tsc": "^2.0.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite": "^4.3.9"
   }
 }
