some fixes after linting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,13 @@
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
     "rules": {
-        "max-len": [2, 100],
-        "max-params": [2, 3],
+        "max-len": [2, 160],
+        "max-params": [1, 5],
         "@typescript-eslint/no-unused-vars": 2,
         "no-console": "off",
         "no-undef": "off",
+        "no-useless-constructor": "off",
+        "camelcase": "off",
         "no-underscore-dangle":  0,
         "import/prefer-default-export": 0,
         "default-param-last": 0,
