--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
         "no-param-reassign": 0,
         "no-shadow": 0,
         "prefer-promise-reject-errors": 0,
+        "no-useless-catch": 0,
+        "class-methods-use-this": 0,
         "import/extensions": ["error", "ignorePackages", {
             "js": "never",
             "jsx": "never",
